--- a/OMNY Analysis.ipynb
+++ b/OMNY Analysis.ipynb
@@ -34,7 +34,8 @@
    "source": [
     "# Load libraries\n",
     "import pandas as pd # pd is the standard alias https://pandas.pydata.org/docs/getting_started/intro_tutorials/01_table_oriented.html\n",
-    "import seaborn as sns # sns is the convention https://seaborn.pydata.org/tutorial/introduction.html"
+    "import seaborn as sns # sns is the convention https://seaborn.pydata.org/tutorial/introduction.html\n",
+    "import calendar"
    ]
   },
   {
@@ -136,7 +137,7 @@
     "# Convert Trip Time object column with value such as 2022-07-19 20:50:29 into a datetime type\n",
     "df['start_time'] = pd.to_datetime(df['start_time'])\n",
     "\n",
-    "\n",
+    "# TODO add a commented-out line that allows for filtering the DataFrame down between a specific start and end time\n",
     "\n",
     "df.info(show_counts=False)\n",
     "df"
@@ -201,7 +202,7 @@
     "frequencies = df['start_location'].value_counts()\n",
     "\n",
     "# Use the Series with a filter to get only the locations with a count of 1, and then get the count and the list of indices (location names)\n",
-    "print('Locations that have been visited only once:', len(frequencies[frequencies == 1]), frequencies[frequencies == 1].index.to_list())\n",
+    "print('Locations that have been visited only once:', len(frequencies[frequencies == 1]), sorted(frequencies[frequencies == 1].index.to_list()))\n",
     "\n",
     "\n"
    ]
@@ -238,10 +239,22 @@
     "\n",
     "- This looks at how transit happens over different time periods\n",
     "  - What times of day are most common?\n",
+    "  - What days of the week are the most common?\n",
     "  - What weeks, months, and quarters of the year had the most trips?\n",
     "  - How many weeks went over the 12 ride fare cap, and how many came close?\n",
+    "  - What is the delta between riders per week, month, or quarter? AKA visualize how one rider's frequency compares to the others\n",
     "- Resources\n",
-    "  - TBD"
+    "  - Floor a date based on a certain field `.dt.floor(\"H\")` https://pandas.pydata.org/docs/reference/api/pandas.Series.dt.floor.html?highlight=floor#pandas.Series.dt.floor\n",
+    "  - Count occurrences in a Series https://pandas.pydata.org/docs/reference/api/pandas.Series.value_counts.html\n",
+    "  - Seaborn countplot which does the aggregation automatically https://seaborn.pydata.org/generated/seaborn.countplot.html\n",
+    "  - DataFrame group by month https://www.statology.org/pandas-group-by-month/\n",
+    "  - DataFrame group by multiple columns using square braces https://jamesrledoux.com/code/group-by-aggregate-pandas\n",
+    "  - Barplot reference with orient https://seaborn.pydata.org/generated/seaborn.barplot.html\n",
+    "  - Converting a numeric month to a named month using calendar https://stackoverflow.com/questions/37625334/convert-month-int-to-month-name-in-pandas\n",
+    "  - Breaking up a multi index by running a reset_index https://pandas.pydata.org/docs/reference/api/pandas.Series.reset_index.html\n",
+    "  - Pandas time to string convert https://pandas.pydata.org/docs/reference/api/pandas.Series.dt.strftime.html using the Python formatting reference https://docs.python.org/3/library/datetime.html#strftime-and-strptime-behavior\n",
+    "  - Convert datetime to day of week https://stackoverflow.com/questions/60214194/error-in-reading-stock-data-datetimeproperties-object-has-no-attribute-week\n",
+    "  - Set a specific barplot order https://stackoverflow.com/questions/49034829/keep-weekdays-ordered-on-pandas-boxplot-using-seaborn"
    ]
   },
   {
@@ -250,7 +263,167 @@
    "id": "778ca770-2941-41b2-a2ea-d5acb5610fd5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Get the hour in which the start_time occurred\n",
+    "df['start_hour'] = df['start_time'].dt.hour\n",
+    "\n",
+    "sns.set(rc={'figure.figsize':(8,5)})\n",
+    "sns.countplot(data=df, x=df['start_hour']).set(ylabel=None, xlabel='Start Hour', title='Trip Start Time');\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "452a2d33-40e4-4fa9-9dae-5643ffd68ea6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Separate out the start hour by rider, to more easily see per-person trends\n",
+    "sns.countplot(data=df, x=df['start_hour'], hue=df['rider_id']).set(ylabel=None, xlabel='Start Hour', title='Trip Start Time By Rider');"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "56358dad-be1e-41ba-975d-88a3596d02ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# What days of the week had the most trips?\n",
+    "weekday_frequency = df.groupby([df['start_time'].dt.day_name()])['fare_cost'].count()\n",
+    "\n",
+    "# Convert the Multi Index Series into a DataFrame \n",
+    "weekday_frequency = weekday_frequency.reset_index()\n",
+    "\n",
+    "# Set the order of the fields\n",
+    "order = [\"Sunday\", \"Monday\", \"Tuesday\", \"Wednesday\", \"Thursday\", \"Friday\", \"Saturday\"]\n",
+    "\n",
+    "sns.set(rc={'figure.figsize':(8,5)})\n",
+    "sns.barplot(data=weekday_frequency, x='fare_cost', y='start_time', order=order).set(ylabel=None, xlabel='Count', title='Aggregate Rides Per Weekday');"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f3f82d82-92c8-4749-9cc8-02c6577b9bc0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# What days of the week had the most trips per rider?\n",
+    "weekday_frequency = df.groupby([df['start_time'].dt.day_name(), df['rider_id']])['fare_cost'].count()\n",
+    "\n",
+    "# Convert the Multi Index Series into a DataFrame \n",
+    "weekday_frequency = weekday_frequency.reset_index()\n",
+    "\n",
+    "# Set the order of the fields\n",
+    "order = [\"Sunday\", \"Monday\", \"Tuesday\", \"Wednesday\", \"Thursday\", \"Friday\", \"Saturday\"]\n",
+    "\n",
+    "sns.set(rc={'figure.figsize':(8,5)})\n",
+    "sns.barplot(data=weekday_frequency, x='fare_cost', y='start_time', order=order, hue='rider_id').set(ylabel=None, xlabel='Count', title='Aggregate Rides Per Weekday Per Rider');"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce5e15fc-a63d-4fe1-9e51-380e8a7c4c1a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# What weeks of the year have the most trips?\n",
+    "week_frequency = df.groupby([df['start_time'].dt.strftime('%W')])['fare_cost'].count()\n",
+    "\n",
+    "# Convert the Multi Index Series into a DataFrame \n",
+    "week_frequency = week_frequency.reset_index()\n",
+    "\n",
+    "sns.set(rc={'figure.figsize':(12,5)})\n",
+    "sns.barplot(data=week_frequency, x='start_time', y='fare_cost').set(ylabel='Count', xlabel='Week Number', title='Aggregate Rides Per Week');"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "97f8ed97-4362-4db5-b0c5-ceb64298903f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# What weeks of the year have the most trips per rider?\n",
+    "week_frequency = df.groupby([df['start_time'].dt.strftime('%W'), df['rider_id']])['fare_cost'].count()\n",
+    "\n",
+    "# Convert the Multi Index Series into a DataFrame \n",
+    "week_frequency = week_frequency.reset_index()\n",
+    "\n",
+    "sns.set(rc={'figure.figsize':(12,5)})\n",
+    "sns.barplot(data=week_frequency, x='start_time', y='fare_cost', hue='rider_id').set(ylabel='Count', xlabel='Week Number', title='Aggregate Rides Per Week Per Rider');"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b37ba1ab-cf62-49b3-ac24-e86c1c163f8b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# What months of the year had the most trips?\n",
+    "month_frequency = df.groupby([df['start_time'].dt.month])['fare_cost'].count()\n",
+    "\n",
+    "# Convert the Multi Index Series into a DataFrame \n",
+    "month_frequency = month_frequency.reset_index()\n",
+    "\n",
+    "# Relabel the numeric months to named months\n",
+    "month_frequency['month'] = month_frequency['start_time'].apply(lambda x: calendar.month_abbr[x])\n",
+    "\n",
+    "sns.set(rc={'figure.figsize':(8,5)})\n",
+    "sns.barplot(data=month_frequency, x='fare_cost', y='month', orient='h').set(ylabel='Month', xlabel='Count', title='Aggregate Rides Per Month');"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "74e125ea-c4cf-4f49-b82f-5f64797103c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# What months of the year have the most trips per rider?\n",
+    "month_frequency = df.groupby([df['start_time'].dt.month, df['rider_id']])['fare_cost'].count()\n",
+    "\n",
+    "# Convert the Multi Index Series into a DataFrame \n",
+    "month_frequency = month_frequency.reset_index()\n",
+    "\n",
+    "# Relabel the numeric months to named months\n",
+    "month_frequency['month'] = month_frequency['start_time'].apply(lambda x: calendar.month_abbr[x])\n",
+    "\n",
+    "sns.barplot(data=month_frequency, x='fare_cost', y='month', orient='h', hue='rider_id').set(ylabel='Month', xlabel='Count', title='Aggregate Rides Per Month Per Rider');"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c7e5abf0-9925-4411-993f-b36ac0777a6c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# What quarters of each year had the most trips?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2c2d2e8f-c1c8-4cc6-a9ac-9db2c8a00125",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# What quarters of each year had the most trips per rider?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0139b074-9dad-4364-85b4-65d166a8b4c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# How many weeks went over the 12 ride fare cap, and how many came close?"
+   ]
   },
   {
    "cell_type": "markdown",
