Added financial analysis

--- a/OMNY Analysis.ipynb
+++ b/OMNY Analysis.ipynb
@@ -35,6 +35,7 @@
     "# Load libraries\n",
     "import pandas as pd # pd is the standard alias https://pandas.pydata.org/docs/getting_started/intro_tutorials/01_table_oriented.html\n",
     "import seaborn as sns # sns is the convention https://seaborn.pydata.org/tutorial/introduction.html\n",
+    "import numpy as np\n",
     "import calendar"
    ]
   },
@@ -166,7 +167,8 @@
     "  - Get a Series based on frequency/count https://stackoverflow.com/questions/48628417/how-to-select-rows-in-pandas-dataframe-where-value-appears-more-than-once\n",
     "  - Prevent the error `A value is trying to be set on a copy of a slice from a DataFrame.` by using .copy() https://stackoverflow.com/questions/44028898/a-value-is-trying-to-be-set-on-a-copy-of-a-slice-from-a-dataframe-pandas\n",
     "  - Select rows matching a certain list of values `df[df['A'].isin([3, 6])]` https://stackoverflow.com/questions/12096252/use-a-list-of-values-to-select-rows-from-a-pandas-dataframe\n",
-    "  - Categories stick around until removed manually https://pandas.pydata.org/docs/reference/api/pandas.CategoricalIndex.remove_unused_categories.html"
+    "  - Categories stick around until removed manually https://pandas.pydata.org/docs/reference/api/pandas.CategoricalIndex.remove_unused_categories.html\n",
+    "  - I can use `.set(xscale='log')` to change the scale from linear to log"
    ]
   },
   {
@@ -254,7 +256,13 @@
     "  - Breaking up a multi index by running a reset_index https://pandas.pydata.org/docs/reference/api/pandas.Series.reset_index.html\n",
     "  - Pandas time to string convert https://pandas.pydata.org/docs/reference/api/pandas.Series.dt.strftime.html using the Python formatting reference https://docs.python.org/3/library/datetime.html#strftime-and-strptime-behavior\n",
     "  - Convert datetime to day of week https://stackoverflow.com/questions/60214194/error-in-reading-stock-data-datetimeproperties-object-has-no-attribute-week\n",
-    "  - Set a specific barplot order https://stackoverflow.com/questions/49034829/keep-weekdays-ordered-on-pandas-boxplot-using-seaborn"
+    "  - Set a specific barplot order https://stackoverflow.com/questions/49034829/keep-weekdays-ordered-on-pandas-boxplot-using-seaborn\n",
+    "  - Group dates by quarter https://stackoverflow.com/questions/49362685/transform-a-datetime-column-to-yyyyqx-with-quarter-number\n",
+    "  - Format a datetime field into a YYY-WW number https://stackoverflow.com/questions/31181295/converting-a-pandas-date-to-week-number\n",
+    "  - Add a vline or hline to an axis in a figure https://matplotlib.org/stable/api/_as_gen/matplotlib.axes.Axes.axvline.html (note that seaborn's line will need to set a variable representing the Axes, and then that variable will be called and modified)\n",
+    "  - Set specific x tick or y tick labels `ax.set(xticks=arange(1,22,2))` https://matplotlib.org/stable/api/_as_gen/matplotlib.axes.Axes.set_xticks.html https://stackoverflow.com/questions/58476654/how-to-remove-or-hide-x-axis-labels-from-a-seaborn-matplotlib-plot\n",
+    "  - Use `arange` to get a specific list of values https://www.w3resource.com/numpy/array-creation/arange.php\n",
+    "  - More xtick information, but not what I used https://matplotlib.org/stable/api/_as_gen/matplotlib.axes.Axes.set_xticks.html though it did note xticklabels should not be used"
    ]
   },
   {
@@ -402,17 +410,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# What quarters of each year had the most trips?"
+    "# What quarters of each year had the most trips?\n",
+    "quarter_frequency = df.groupby([df['start_time'].dt.to_period('Q')])['fare_cost'].count()\n",
+    "\n",
+    "# Convert the Multi Index Series into a DataFrame \n",
+    "quarter_frequency = quarter_frequency.reset_index()\n",
+    "\n",
+    "sns.set(rc={'figure.figsize':(5,5)})\n",
+    "sns.barplot(data=quarter_frequency, x='fare_cost', y='start_time').set(ylabel=None, xlabel='Count', title='Rides Per Quarter');"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c2d2e8f-c1c8-4cc6-a9ac-9db2c8a00125",
+   "id": "2de4ca47-1af2-4b23-839d-9dfbf1c38174",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# What quarters of each year had the most trips per rider?"
+    "# What quarters of each year had the most trips per rider?\n",
+    "quarter_frequency = df.groupby([df['start_time'].dt.to_period('Q'), df['rider_id']])['fare_cost'].count()\n",
+    "\n",
+    "# Convert the Multi Index Series into a DataFrame \n",
+    "quarter_frequency = quarter_frequency.reset_index()\n",
+    "\n",
+    "sns.set(rc={'figure.figsize':(5,5)})\n",
+    "sns.barplot(data=quarter_frequency, x='fare_cost', y='start_time', hue='rider_id').set(ylabel=None, xlabel='Count', title='Rides Per Quarter Per Rider');"
    ]
   },
   {
@@ -422,7 +444,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# How many weeks went over the 12 ride fare cap, and how many came close?"
+    "# How many weeks went over the 12 ride fare cap, and how many came close?\n",
+    "# TODO perhaps change this to the resample method, so weeks with 0 transit are still included. Right now week 2021-W44 had no travel and is missing\n",
+    "week_frequency = df.groupby([df['start_time'].dt.strftime('%Y-W%U'), df['rider_id']])['fare_cost'].count()\n",
+    "\n",
+    "# Convert the Multi Index Series into a DataFrame \n",
+    "week_frequency = week_frequency.reset_index()\n",
+    "\n",
+    "sns.set(rc={'figure.figsize':(5,20)})\n",
+    "ax = sns.barplot(data=week_frequency, x='fare_cost', y='start_time', hue='rider_id')\n",
+    "ax.set(ylabel=None, xlabel='Count', title='Rides Per Week Per Rider', xticks=np.arange(0,20,2))\n",
+    "ax.axvline(12,0,1);"
    ]
   },
   {
@@ -436,7 +468,161 @@
     "  - What starting day of the week best utilizes the fare cap?\n",
     "  - What is the average/max monthly spend rate?\n",
     "- Resources\n",
-    "  - TBD"
+    "  - Resample allows grouping more intelligently by date columns https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.resample.html\n",
+    "  - Resample offsets https://pandas.pydata.org/pandas-docs/stable/user_guide/timeseries.html#dateoffset-objects\n",
+    "  - More resample info https://pandas.pydata.org/pandas-docs/stable/user_guide/timeseries.html#dateoffset-objects\n",
+    "  - Anchored offsets to allow different week start days https://pandas.pydata.org/pandas-docs/stable/user_guide/timeseries.html#anchored-offsets\n",
+    "  - I can couple a groupby with a resample https://pandas.pydata.org/docs/reference/api/pandas.core.groupby.DataFrameGroupBy.resample.html\n",
+    "  - When dropping columns, remember to include axis=1 https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.drop.html\n",
+    "  - Grouping by using a series https://stackoverflow.com/questions/33483670/how-to-group-a-series-by-values-in-pandas https://pandas.pydata.org/docs/reference/api/pandas.Series.groupby.html\n",
+    "  - Concatenation of multiple series into a single DataFrame based on their index value (not merging, not joining) https://stackoverflow.com/questions/18083187/combining-two-series-in-pandas-along-their-index https://pandas.pydata.org/docs/reference/api/pandas.concat.html\n",
+    "  - Define a function https://www.w3schools.com/python/python_functions.asp\n",
+    "  - Sort a dataframe by its index in increasing order https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.sort_index.html\n",
+    "  - Seaborn Line Plot https://seaborn.pydata.org/generated/seaborn.lineplot.html\n",
+    "  - Collapse a DataFrame into a Series where the rows are the old column titles and the values are the sum of the columns https://sparkbyexamples.com/python/pandas-sum-dataframe-columns\n",
+    "  - Catplot https://seaborn.pydata.org/generated/seaborn.catplot.html\n",
+    "  - DataFrame renaming using position rather than name https://stackoverflow.com/questions/43759921/pandas-rename-column-by-position\n",
+    "  - DataFrame subset selection using double square brackets https://pandas.pydata.org/docs/getting_started/intro_tutorials/03_subset_data.html"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ac068d2d-d044-45ad-add1-2755cd72b0f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# What starting day of the week best utilizes the fare cap?\n",
+    "\n",
+    "# TODO add an optional filter based on rider_id\n",
+    "\n",
+    "def calculate_weekly_rides(day_of_week):\n",
+    "    # Define the anchored offset, aka W-SUN, W-WED, W-FRI, etc. \n",
+    "    anchored_offset = 'W-'+day_of_week\n",
+    "    # Create a new DataFrame counting the number of rides per week per rider, where the week is defined by the anchored offset\n",
+    "    resampled = df.groupby(['rider_id']).resample(anchored_offset, on='start_time').count()\n",
+    "    # Remove the groupby column duplicate (that also now exists in the multi-index) that would prevent a reset_index\n",
+    "    resampled = resampled.drop(['rider_id'], axis=1)\n",
+    "    # Then reset the index and grab an arbitrary column from the resulting DataFrame, as all the columns have identical data\n",
+    "    resampled_series = resampled.reset_index()['trip_id']\n",
+    "    # Next, group on the number of rides to know how many occurrences exist for each ride count per week\n",
+    "    # Finally rename it to the week start day it's representing\n",
+    "    resampled_series = resampled_series.groupby(resampled_series).count().rename(day_of_week)\n",
+    "    return resampled_series\n",
+    "\n",
+    "# Use the helper to calculate all possibile week start days and concatenate them into a DataFrame\n",
+    "# Sort the index to force ascending order\n",
+    "merged = pd.concat([calculate_weekly_rides('SUN'), \n",
+    "                    calculate_weekly_rides('MON'),\n",
+    "                   calculate_weekly_rides('TUE'),\n",
+    "                   calculate_weekly_rides('WED'),\n",
+    "                   calculate_weekly_rides('THU'),\n",
+    "                   calculate_weekly_rides('FRI'),\n",
+    "                   calculate_weekly_rides('SAT')], axis=1).sort_index()\n",
+    "\n",
+    "# Rename the index to be clearer\n",
+    "merged.index = merged.index.rename('Rides Taken')\n",
+    "\n",
+    "merged\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a94e330a-d643-4e45-8207-d19431f12969",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.set(rc={'figure.figsize':(8,5)})\n",
+    "sns.lineplot(data=merged).set(ylabel='Occurrences', xlabel='Weekly Ride Count', title='Weekly Ride Count With Different Start Days Of The Week', xticks=np.arange(0,26,2));\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3ae779ac-061a-4b6a-9182-0ccff7215841",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# How many weeks does the fare cap get reached, based on different start days?\n",
+    "\n",
+    "# Filter the merged dataframe to rows with index 12 or more, and then group by and sum the number of weeks\n",
+    "# Reset the index to convert it to a DataFrame\n",
+    "fare_cap_rides = merged[merged.index >= 12].sum().reset_index()\n",
+    "# Rename the columns to be more readable\n",
+    "fare_cap_rides = fare_cap_rides.rename(columns={fare_cap_rides.columns[0]:'weekday',fare_cap_rides.columns[1]:'count'})\n",
+    "\n",
+    "sns.set(rc={'figure.figsize':(7,6)})\n",
+    "sns.barplot(data=fare_cap_rides, x='weekday', y='count').set(ylabel='Fare Cap Reached Count', xlabel=None, title='Number Of Weeks Fare Cap Was Reached, Based On Week Start Day');\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "73402b31-1949-4ae2-aea1-bb2d8f50ead4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# What is the monthly spend rate?\n",
+    "\n",
+    "# Select only the columns needed for grouping and summing, group and resample, and then sum on the fare cost.\n",
+    "# Reset the index to split out the multi index\n",
+    "resampled = df[['rider_id','start_time','fare_cost']].groupby(['rider_id']).resample('M', on='start_time').sum().reset_index()\n",
+    "# Change the date column to be more readable, YYYY-month instead of YYYY-MM-DD HH:MM:SS\n",
+    "resampled['start_time'] = resampled['start_time'].dt.strftime('%Y-%b')\n",
+    "\n",
+    "sns.set(rc={'figure.figsize':(5,8)})\n",
+    "sns.barplot(x='fare_cost', y='start_time', hue='rider_id', data=resampled).set(ylabel=None, xlabel='Monthly Cost ($)', title='Monthly Transit Cost Per Rider', xticks=np.arange(0,100,10));\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c167245-0af2-471e-8760-0ddf272b2ac3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# What is the annual spend rate?\n",
+    "\n",
+    "# Select only the columns needed for grouping and summing, group and resample, and then sum on the fare cost.\n",
+    "# Reset the index to split out the multi index\n",
+    "resampled = df[['rider_id','start_time','fare_cost']].groupby(['rider_id']).resample('Y', on='start_time').sum().reset_index()\n",
+    "# Change the date column to be more readable, YYYY instead of YYYY-MM-DD HH:MM:SS\n",
+    "resampled['start_time'] = resampled['start_time'].dt.strftime('%Y')\n",
+    "\n",
+    "sns.set(rc={'figure.figsize':(5,5)})\n",
+    "sns.barplot(y='fare_cost', x='start_time', hue='rider_id', data=resampled).set(xlabel=None, ylabel='Annual Cost ($)', title='Annual Transit Cost Per Rider', yticks=np.arange(0,800,50));\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6ebf6e96-d9a1-4334-bd22-a7d7133a13a5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# How much savings were there from the fare cap?\n",
+    "\n",
+    "free_rides = df[df['fare_cost'] == 0]\n",
+    "free_rides = free_rides[free_rides['product_type'].str.contains('Fare Cap')]\n",
+    "print('So far, there have been',len(free_rides),'rides that were free due to the fare cap being reached')\n",
+    "free_rides"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "509c0e75-4b48-487a-94a6-a63610cc3271",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# How many free transfers were there?\n",
+    "\n",
+    "free_rides = df[df['fare_cost'] == 0]\n",
+    "free_rides = free_rides[free_rides['product_type'].str.contains('Transfer')]\n",
+    "print('So far, there have been',len(free_rides),' rides that were free transfers')"
    ]
   }
  ],
