README updated, filled in the TODOs

--- a/OMNY Analysis.ipynb
+++ b/OMNY Analysis.ipynb
@@ -76,7 +76,7 @@
     "# Reference is a unique ID per fare payment, and can be used to get unique rows\n",
     "df.drop_duplicates(subset=['Reference'],inplace=True,ignore_index=True)\n",
     "\n",
-    "print('Unique CSV Data has row count of', len(df))\n"
+    "print('Unique CSV Data has row count of', len(df))"
    ]
   },
   {
@@ -109,7 +109,8 @@
     "  - https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.astype.html\n",
     "  - https://lifewithdata.com/2022/02/28/how-to-convert-a-string-column-to-float-in-pandas/\n",
     "  - https://stackoverflow.com/questions/32464280/converting-currency-with-to-numbers-in-python-pandas\n",
-    "  - https://pandas.pydata.org/docs/reference/api/pandas.to_datetime.html"
+    "  - https://pandas.pydata.org/docs/reference/api/pandas.to_datetime.html\n",
+    "  - Date filtering https://sparkbyexamples.com/pandas/pandas-filter-dataframe-rows-on-dates/"
    ]
   },
   {
@@ -128,6 +129,9 @@
     "                   'Product Type':'product_type',\n",
     "                   'Fare Amount ($)':'fare_cost'})\n",
     "\n",
+    "# Optional: Filter the DataFrame down between a specific start and end date\n",
+    "#df = df[(df['start_time'] > \"2020-09-20\") & (df['start_time'] < \"2021-11-17\")]\n",
+    "\n",
     "# Convert categorical fields from object to category\n",
     "df = df.astype({'rider_id': 'category','transit_mode': 'category','start_location': 'category','product_type': 'category'})\n",
     "\n",
@@ -137,8 +141,6 @@
     "\n",
     "# Convert Trip Time object column with value such as 2022-07-19 20:50:29 into a datetime type\n",
     "df['start_time'] = pd.to_datetime(df['start_time'])\n",
-    "\n",
-    "# TODO add a commented-out line that allows for filtering the DataFrame down between a specific start and end time\n",
     "\n",
     "df.info(show_counts=False)\n",
     "df"
@@ -179,7 +181,7 @@
    "outputs": [],
    "source": [
     "sns.set(rc={'figure.figsize':(5,5)})\n",
-    "sns.countplot(y=df['start_location'], order=df['start_location'].value_counts().iloc[:15].index).set(ylabel=None, xlabel=None, title='Start Location Frequency (Top 15)');\n"
+    "sns.countplot(y=df['start_location'], order=df['start_location'].value_counts().iloc[:15].index).set(ylabel=None, xlabel=None, title='Start Location Frequency (Top 15)');"
    ]
   },
   {
@@ -190,7 +192,7 @@
    "outputs": [],
    "source": [
     "sns.set(rc={'figure.figsize':(5,20)})\n",
-    "sns.countplot(y=df['start_location']).set(ylabel=None, xlabel=None, title='Start Location Frequency (Alphabetical)');\n"
+    "sns.countplot(y=df['start_location']).set(ylabel=None, xlabel=None, title='Start Location Frequency (Alphabetical)');"
    ]
   },
   {
@@ -204,9 +206,7 @@
     "frequencies = df['start_location'].value_counts()\n",
     "\n",
     "# Use the Series with a filter to get only the locations with a count of 1, and then get the count and the list of indices (location names)\n",
-    "print('Locations that have been visited only once:', len(frequencies[frequencies == 1]), sorted(frequencies[frequencies == 1].index.to_list()))\n",
-    "\n",
-    "\n"
+    "print('Locations that have been visited only once:', len(frequencies[frequencies == 1]), sorted(frequencies[frequencies == 1].index.to_list()))"
    ]
   },
   {
@@ -229,7 +229,7 @@
     "\n",
     "\n",
     "sns.set(rc={'figure.figsize':(5,8)})\n",
-    "sns.countplot(y=most_visited_locations['start_location'], hue=most_visited_locations['rider_id']).set(ylabel=None, xlabel=None, title='Start Locations With More Than 5 Visits, By Rider');\n"
+    "sns.countplot(y=most_visited_locations['start_location'], hue=most_visited_locations['rider_id']).set(ylabel=None, xlabel=None, title='Start Locations With More Than 5 Visits, By Rider');"
    ]
   },
   {
@@ -276,7 +276,7 @@
     "df['start_hour'] = df['start_time'].dt.hour\n",
     "\n",
     "sns.set(rc={'figure.figsize':(8,5)})\n",
-    "sns.countplot(data=df, x=df['start_hour']).set(ylabel=None, xlabel='Start Hour', title='Trip Start Time');\n"
+    "sns.countplot(data=df, x=df['start_hour']).set(ylabel=None, xlabel='Start Hour', title='Trip Start Time');"
    ]
   },
   {
@@ -494,7 +494,9 @@
    "source": [
     "# What starting day of the week best utilizes the fare cap?\n",
     "\n",
-    "# TODO add an optional filter based on rider_id\n",
+    "# Optional: Uncomment to filter based on rider_id\n",
+    "#print(df['rider_id'].unique())\n",
+    "#df=df[df['rider_id'] == '1234567890']\n",
     "\n",
     "def calculate_weekly_rides(day_of_week):\n",
     "    # Define the anchored offset, aka W-SUN, W-WED, W-FRI, etc. \n",
@@ -523,9 +525,7 @@
     "# Rename the index to be clearer\n",
     "merged.index = merged.index.rename('Rides Taken')\n",
     "\n",
-    "merged\n",
-    "\n",
-    "\n"
+    "merged"
    ]
   },
   {
@@ -536,7 +536,7 @@
    "outputs": [],
    "source": [
     "sns.set(rc={'figure.figsize':(8,5)})\n",
-    "sns.lineplot(data=merged).set(ylabel='Occurrences', xlabel='Weekly Ride Count', title='Weekly Ride Count With Different Start Days Of The Week', xticks=np.arange(0,26,2));\n"
+    "sns.lineplot(data=merged).set(ylabel='Occurrences', xlabel='Weekly Ride Count', title='Weekly Ride Count With Different Start Days Of The Week', xticks=np.arange(0,26,2));"
    ]
   },
   {
@@ -555,7 +555,7 @@
     "fare_cap_rides = fare_cap_rides.rename(columns={fare_cap_rides.columns[0]:'weekday',fare_cap_rides.columns[1]:'count'})\n",
     "\n",
     "sns.set(rc={'figure.figsize':(7,6)})\n",
-    "sns.barplot(data=fare_cap_rides, x='weekday', y='count').set(ylabel='Fare Cap Reached Count', xlabel=None, title='Number Of Weeks Fare Cap Was Reached, Based On Week Start Day');\n"
+    "sns.barplot(data=fare_cap_rides, x='weekday', y='count').set(ylabel='Fare Cap Reached Count', xlabel=None, title='Number Of Weeks Fare Cap Was Reached, Based On Week Start Day');"
    ]
   },
   {
@@ -574,7 +574,7 @@
     "resampled['start_time'] = resampled['start_time'].dt.strftime('%Y-%b')\n",
     "\n",
     "sns.set(rc={'figure.figsize':(5,8)})\n",
-    "sns.barplot(x='fare_cost', y='start_time', hue='rider_id', data=resampled).set(ylabel=None, xlabel='Monthly Cost ($)', title='Monthly Transit Cost Per Rider', xticks=np.arange(0,100,10));\n"
+    "sns.barplot(x='fare_cost', y='start_time', hue='rider_id', data=resampled).set(ylabel=None, xlabel='Monthly Cost ($)', title='Monthly Transit Cost Per Rider', xticks=np.arange(0,100,10));"
    ]
   },
   {
@@ -593,7 +593,7 @@
     "resampled['start_time'] = resampled['start_time'].dt.strftime('%Y')\n",
     "\n",
     "sns.set(rc={'figure.figsize':(5,5)})\n",
-    "sns.barplot(y='fare_cost', x='start_time', hue='rider_id', data=resampled).set(xlabel=None, ylabel='Annual Cost ($)', title='Annual Transit Cost Per Rider', yticks=np.arange(0,800,50));\n"
+    "sns.barplot(y='fare_cost', x='start_time', hue='rider_id', data=resampled).set(xlabel=None, ylabel='Annual Cost ($)', title='Annual Transit Cost Per Rider', yticks=np.arange(0,800,50));"
    ]
   },
   {
